CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_TESTING()

PROJECT(cryptlite)
SET(cryptlite_VERSION_MAJOR 1)
SET(cryptlite_VERSION_MINOR 0)

FIND_PACKAGE(Boost REQUIRED)
## FIND_PACKAGE(Boost 1.45 COMPONENTS filesystem regex REQUIRED)
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

SET(CMAKE_CSS_FLAGS "-Wall")
SET(CMAKE_CSS_FLAGS_DEBUG "-g")
SET(CMAKE_CSS_FLAGS_RELEASE "-O2")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(gtest)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(examples)
